env-prod/user-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: prod
  labels:
    name: quarkus-user-service
    type: back-end
    app: user-service
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: user-service
        type: back-end
        app: user-service
    spec:
      containers:
        - name: user-service-container
          image: trlofficial/user-service:0.0.2
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /health/live
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 3
  selector:
    matchLabels:
      name: user-service
      type: back-end
      app: user-service
  strategy:
    rollingUpdate:
      maxUnavailable: 1
    type: RollingUpdate
