env-prod/user-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: prod
  labels:
    name: user-service
    type: back-end
    app: user-service
spec:
  type: ClusterIP
  ports:
    - targetPort: 8080
      port: 8080
      protocol: TCP
  selector:
    name: user-service
    type: back-end
    app: user-service
