env-prod/ingress-resource.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-prod
  namespace: prod
  labels:
    type: back-end
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
          - path: /app(/|$)(.*)
            backend:
              serviceName: user-service
              servicePort: 8080
